--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,8 @@
-<files config.php config.example.php db_connection.php>
+<files config.php config.example.php>
+    order allow,deny
+    deny from all
+</files>
+<files db_connection.php>
     order allow,deny
     deny from all
 </files>
