--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,4 @@
-<files config.php config.example.php>
-    order allow,deny
-    deny from all
-</files>
-<files db_connection.php>
-    order allow,deny
-    deny from all
-</files>
+RewriteEngine On
+RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
+RewriteCond %{HTTPS} off
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
